# oep_studio

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
docs/: AI_PROVIDER_ARCHITECTURE.md  ANTHROPIC_PROVIDER.md  ARCHITECTURE.md  COMMAND_SYSTEM.md  CONNECTION_MANAGER.md  DASHBOARD.md  DESIGN_LANGUAGE.md  DIAGRAM_STUDIO_INTEGRATION.md  ENGINEERING_CONTEXT.md  ENGINEERING_ENTITY_EXTRACTION.md  ENGINEERING_PROJECT.md  EVIDENCE_MODEL.md  FOUNDATION_BRIDGE.md  IMPLEMENTATION_STATUS.md  KNOWLEDGE_CANDIDATES.md  KNOWLEDGE_GRAPH.md  KNOWLEDGE_SESSION_FORMAT.md  KNOWLEDGE_STUDIO.md  NAVIGATION_FRAMEWORK.md  OBJECT_EXPLORER.md  OCR_PIPELINE.md  OEP_ENGINEERING_CONSTITUTION.md  PAIS-001-PLATFORM_ALPHA_INTEGRATION_SPECIFICATION.md  PAIS-001A-PLATFORM_ALPHA_CERTIFICATION_CHECKLIST.md  PLATFORM_ARCHITECTURE.md  PROJECT_EXPLORER.md  PROPERTY_INSPECTOR.md  PROPERTY_INSPECTOR_INTEGRATION.md  REPOSITORY_COMMIT.md  REPOSITORY_EXPLORER.md  REPOSITORY_INTEGRATION.md  SEARCH_WORKSPACE.md  STUDIO_ENGINE_HOST.md  STUDIO_SETTINGS.md  TECH_STACK.md  UI_MOCKUPS.md  UNIFIED_SEARCH.md  WORKFLOW_ARCHITECTURE.md  WORKSPACE_FRAMEWORK.md  WORKSPACE_INTEGRATION.md  (+1 more)
docs/design/: SDD-012-WORKSPACE_PROFILES.md.md  SDD-013-KNOWLEDGE_STUDIO.md  SDD-014-KNOWLEDGE_ACQUISITION_PIPELINE.md  SDD-015-ENGINEERING_KNOWLEDGE_MODEL.md  SDD-016-KNOWLEDGE_STUDIO_USER_EXPERIENCE.md  SDD-017-KNOWLEDGE_CURATION_WORKFLOW.md  SDD-018-KNOWLEDGE_LIFECYCLE_AND_PROVENANCE.md  SDD-019-ENGINEERING_OBJECT_PHILOSOPHY.md  SDD-020-KNOWLEDGE_REVIEW_SYSTEM.md  SDD-021-EVIDENCE_MODEL.md  SDD-022-AI_ARCHITECTURE.md  SDD-023-STUDIO_CONFIGURATION_ARCHITECTURE.md
docs/tasks/: WORK_PACKAGE_003.md  WORK_PACKAGE_004.md  WORK_PACKAGE_005.md  WORK_PACKAGE_006.md  WORK_PACKAGE_007.md  WORK_PACKAGE_008.md  WORK_PACKAGE_009.md  WORK_PACKAGE_010.md  WORK_PACKAGE_011.md  WORK_PACKAGE_012.md  WORK_PACKAGE_013.md  (+27 more)
lib/: main.dart
native/foundation_bridge/: CMakeLists.txt  oep_foundation_bridge.def
native/foundation_bridge/src/: bridge_stub.cpp
test/: ai_analysis_service_test.dart  ai_suggestion_parser_test.dart  anthropic_provider_live_test.dart  anthropic_provider_test.dart  command_palette_dialog_test.dart  command_registry_test.dart  commit_conversion_service_test.dart  commit_plan_service_test.dart  context_detection_service_test.dart  context_validation_service_test.dart  dependency_service_test.dart  diagram_document_test.dart  diagram_studio_settings_test.dart  diagram_workspace_state_test.dart  engineering_entity_extraction_service_test.dart  engineering_inspectable_test.dart  engineering_pattern_library_test.dart  entity_validation_service_test.dart  knowledge_candidate_list_query_test.dart  knowledge_graph_service_test.dart  knowledge_session_service_test.dart  knowledge_session_storage_test.dart  mock_ai_provider_test.dart  object_list_query_test.dart  ocr_cache_service_test.dart  ocr_search_service_test.dart  platform_event_bus_test.dart  platform_input_service_test.dart  platform_notification_service_test.dart  prompt_service_test.dart  provenance_service_test.dart  relationship_list_query_test.dart  session_health_service_test.dart  session_manager_test.dart  settings_controller_state_test.dart  settings_migration_service_test.dart  settings_registry_test.dart  settings_service_test.dart  settings_validation_service_test.dart  studio_registry_test.dart  (+6 more)
windows/: CMakeLists.txt
(+295 files in other folders)
